--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-    <b>Powered by </b>The Blockchain </a></p>
+    <b>Powered by </b>The Blockchain 
 </footer>
 
 </body>
