--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
   <img class="w3-image" src="/CONTENT/IMAGES/MAIN.jpg" alt="Architecture" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>COIN</b></span> <span class="w3-hide-small w3-text-light-grey">SOLIDATE</span></h1>
+    <h5 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>COIN</b></span> <span class="w3-hide-small w3-text-light-grey">SOLIDATE</span></h5>
   </div>
 </header>
 
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-    <b>Powered by </b>The Blockchain 
+    <b>Powered by </b>Ethereum 
 </footer>
 
 </body>
